# teampl

./: .readthedocs.yaml  README.md  README.rst  lumache.py  pyproject.toml
docs/source/: branches.rst  conf.py  overview.rst
docs/source/audio/: index.rst
docs/source/text/: index.rst
teampl/audio/: convert.py  file.py  main.py  process.py
teampl/imag/: blur.py  crop.py  flip_horizontal.py  flip_vertical.py  load_image.py  main.py  save_image.py  test_image_funcs.py
teampl/text/: badwords.py  file_save.py  main.py  profanity_filter.py  utils.py
teampl/video/: main2.py  main3.py
teampl_hyenseok.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
video/: main1.py
